# cli_virtual_assistant_using_rust

./: Cargo.toml  Readme.md  sample.json
src/: main.rs
src/serializers/: mod.rs
