[package]
name = "openai"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = "1.0.162"
serde_derive = "1.0.162"
serde_json = "1.0.96"
tokio = { version = "1.12.0", features = ["full"]}
spinners = "4.1.0"
dotenv = "0.15.0"
termimad = "0.20"
